Bug 1133955 - Record the last seek time to decide the direction to seek. r=sotaro